<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="@color/c_f0f0f0"
        >

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_15"
            android:paddingTop="@dimen/dp_25"
            android:paddingBottom="@dimen/dp_25"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginBottom="@dimen/dp_10"
            >

        <ImageView
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_60"
                android:src="@mipmap/fenlei1"
                />

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginRight="@dimen/dp_10"
                >

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Z_COMIC"
                    android:textSize="@dimen/dp_18"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dp_14"
                    android:text="项目地址"
                    android:layout_marginTop="@dimen/dp_5"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="项目地址"
                    android:singleLine="true"
                    android:layout_marginTop="@dimen/dp_5"
                    android:ellipsize="end"
                    />
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="start"
                />
    </LinearLayout>

    <com.zysdk.vulture.clib.widget.MenuWidget
            android:id="@+id/menu_dnmode_manage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            android:background="@color/white"
            android:gravity="center_vertical"
            app:showLeftIcon="true"
            app:Title="@string/mode_manage"
            app:hideSubTitle="true"
            app:TitleTextColor="@color/gray"
            app:leftIconRes="@mipmap/icon_night"
            app:showMoreIcon="false"
            app:showCheckbox="true"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            />

    <com.zysdk.vulture.clib.widget.MenuWidget
            android:id="@+id/menu_cache_manage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            android:background="@color/white"
            app:TitleTextColor="@color/gray"
            android:gravity="center_vertical"
            app:showLeftIcon="true"
            app:Title="@string/clear_cache"
            app:hideSubTitle="true"
            app:showExtMsg="true"
            app:leftIconRes="@mipmap/icon_cache"
            app:extMsgStr="7MB"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            />

    <com.zysdk.vulture.clib.widget.MenuWidget
            android:id="@+id/menu_feedback"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            android:background="@color/white"
            app:TitleTextColor="@color/gray"
            android:gravity="center_vertical"
            app:Title="@string/feed_back"
            app:hideSubTitle="true"
            app:showLeftIcon="true"
            app:leftIconRes="@mipmap/icon_feedback"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            />

    <com.zysdk.vulture.clib.widget.MenuWidget
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            app:showLeftIcon="true"
            android:background="@color/white"
            android:gravity="center_vertical"
            app:Title="@string/about_user"
            app:leftIconRes="@mipmap/icon_author"
            app:hideSubTitle="true"
            app:TitleTextColor="@color/gray"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            />

    <com.zysdk.vulture.clib.widget.MenuWidget
            android:id="@+id/menu_update_manage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_65"
            android:background="@color/white"
            app:showLeftIcon="true"
            android:gravity="center_vertical"
            app:Title="@string/check_auto_update"
            app:TitleTextColor="@color/gray"
            app:hideSubTitle="true"
            app:leftIconRes="@mipmap/icon_author"
            />

    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            />
</LinearLayout>